Revision history for Net-Silverpeak-Orchestrator

{{ $NEXT }}

0.008000  2023-09-14 14:21:59+02:00 Europe/Vienna
    - enable TLS verification by default
      by requiring HTTP::Tiny 0.088

0.007000  2023-06-22 15:37:13+02:00 Europe/Vienna
    - add get_appliance_extrainfo method
    - add get_deployment method
    - add get_interface_state method
    - add get_interface_labels_by_type method
    - add get_ha_groups_by_id method
    - add get_vrf_by_id method

0.006000  2023-05-08 17:30:22+02:00 Europe/Budapest
    - add support for user/password login when Enforce CSRF Token Check is
      enabled

0.005000  2022-01-17 15:31:52+01:00 Europe/Vienna
    - fix list_application_groups ok when nested application groups exist
      the returned hash also contains a 'parentGroup' key if it's nested
    - add is_logged_in attribute
    - automatically log out when object is destroyed
      to not leave stale Orchestrator sessions

0.004000  2021-11-10 11:50:05+01:00 Europe/Vienna
    - add application group support

0.003000  2021-10-05 13:38:29+02:00 Europe/Vienna
    - add domain name application support

0.002000  2021-09-27 17:42:44+02:00 Europe/Vienna
    - fix hardcoded template group name instead of
      NET_SILVERPEAK_ORCHESTRATOR_POLICY environment variable
    - skip appliance tests if Orchestrator has none assigned
    - don't expect existing template group NET_SILVERPEAK_ORCHESTRATOR_POLICY
      for tests but create it
    - add create_templategroup method
    - add update_templates_of_templategroup method
    - add delete_templategroup method
    - add list_addressgroup_names method
    - add list_addressgroups method
    - add create_or_update_addressgroup method
    - add get_addressgroup method
    - add delete_addressgroup method
    - add update_addressgroup method
    - add list_servicegroup_names method
    - add list_servicegroups method
    - add create_or_update_servicegroup method
    - add get_servicegroup method