@@ -1,6 +1,7 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - add has_segmentation_enabled
 
 0.008000  2023-09-14 14:21:59+02:00 Europe/Vienna
     - enable TLS verification by default
